Lower memory options for tycho when build run on MS Windows XP